# wee

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
Common/: credentialsUtility.py  status.py  urls.py  utils.py
Common/CommonFuncs/: action_keys.py  assertions.py  waitings.py  webcommon.py
Configs/: hosts_config.py
Configs/Endpoints/: all_endpoints.py
Configs/Locators/: home_page.py
Pages/PageObjects/ui_pages/: HomePage.py
Tests/ui_tests/: conftest.py  test_home_page.py
